bugs with content jumping around

--- a/src/SCSS/_mixins.scss
+++ b/src/SCSS/_mixins.scss
@@ -35,3 +35,14 @@
       -o-transform 350ms cubic-bezier(0.86, 0, 0.07, 1);
   }
 }
+
+@mixin bn-shadow {
+  -webkit-box-shadow: inset 15px -33px 111px 38px rgba(2, 13, 24, 1);
+  -moz-box-shadow: inset 15px -33px 111px 38px rgba(2, 13, 24, 1);
+  box-shadow: inset 15px -33px 111px 38px rgba(2, 13, 24, 1);
+}
+@mixin sl-shadow {
+  -webkit-box-shadow: 4px 16px 88px 53px rgba(2, 13, 24, 1);
+  -moz-box-shadow: 4px 16px 88px 53px rgba(2, 13, 24, 1);
+  box-shadow: 4px 16px 88px 53px rgba(2, 13, 24, 1);
+}
