--- a/src/SCSS/home.scss
+++ b/src/SCSS/home.scss
@@ -1,3 +1,4 @@
+@import "./mixins";
 // --------------------- Home Grid ---------------------
 .home-grid {
   display: grid;
@@ -6,6 +7,7 @@
     ". main main ." minmax(40rem, auto)
     "twoCol twoCol twoCol twoCol" minmax(20rem, auto)
     ". moreSl moreSl ." minmax(20rem, auto)
+    "twoColBot twoColBot twoColBot twoColBot" minmax(20rem, auto)
     ". footer footer ." minmax(20rem, auto)
     / 3rem minmax(400px, 1fr) minmax(200px, 1fr) 3rem;
   @media (max-width: 767px) {
@@ -14,6 +16,7 @@
       ". main main ." minmax(40rem, auto)
       "twoCol twoCol twoCol twoCol" minmax(20rem, auto)
       ". moreSl moreSl ." minmax(20rem, auto)
+      "twoColBot twoColBot twoColBot twoColBot" minmax(20rem, auto)
       ". footer footer ." minmax(20rem, auto)
       / 3rem 1fr 1fr 3rem;
   }
@@ -21,9 +24,7 @@
 
 // --------------------- Header ---------------------
 header {
-  -webkit-box-shadow: inset 15px -33px 111px 38px rgba(2, 13, 24, 1);
-  -moz-box-shadow: inset 15px -33px 111px 38px rgba(2, 13, 24, 1);
-  box-shadow: inset 15px -33px 111px 38px rgba(2, 13, 24, 1);
+  @include bn-shadow;
   grid-area: header;
   display: grid;
   grid-template:
@@ -90,9 +91,7 @@ main {
   margin-top: -2rem;
 }
 .slider-item {
-  -webkit-box-shadow: 4px 16px 88px 53px rgba(2, 13, 24, 1);
-  -moz-box-shadow: 4px 16px 88px 53px rgba(2, 13, 24, 1);
-  box-shadow: 4px 16px 88px 53px rgba(2, 13, 24, 1);
+  @include sl-shadow;
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   margin: 2rem auto 4rem auto;
@@ -120,19 +119,20 @@ main {
 // --------------------- Two Col Overlay ----------------
 .two-col-bgOverlay {
   grid-area: twoCol;
-  margin: -4rem 0;
-  @media (max-width: 767px) {
-    margin-top: -4rem;
-    margin-bottom: -15px;
-  }
 }
-.two-col-grid {
+.two-col-bgOverlay-bottom {
+  grid-area: twoColBot;
+}
+
+.tc-grid {
+  @include bn-shadow;
+
   display: grid;
   grid-template:
     ".   tcImg tcContent ."
     ".   tcImg  tcContent ."
     / 2rem minmax(400px, 3fr) minmax(200px, 2fr) 2rem;
-  padding: 10rem 0;
+  grid-column-gap: 1rem;
   align-items: center;
   @media (max-width: 767px) {
     padding: 5rem 0;
@@ -141,7 +141,7 @@ main {
       ".   tcContent  tcContent ."
       / 2rem 1fr 1fr 2rem;
   }
-  .two-col-img {
+  .tc-img {
     grid-area: tcImg;
     width: 53.90625vw;
     min-height: 30.3125vw;
@@ -169,8 +169,31 @@ main {
       }
     }
   }
-  .two-col-content {
+  .tc-content {
     grid-area: tcContent;
+  }
+}
+// BOTTOM TWO COLUMN GRID
+.tcb-grid {
+  display: grid;
+  @include bn-shadow;
+  grid-template:
+    ".  tcbContent tcbImg ."
+    ".   tcbContent  tcbImg ."
+    / 2rem minmax(200px, 2fr) minmax(400px, 3fr) 2rem;
+  grid-column-gap: 1rem;
+  align-items: center;
+  @media (max-width: 767px) {
+    grid-template:
+      ". tcbImg tcbImg ."
+      ".   tcbContent  tcbContent ."
+      / 2rem 1fr 1fr 2rem;
+  }
+  .tc-img {
+    grid-area: tcbImg;
+  }
+  .tc-content {
+    grid-area: tcbContent;
   }
 }
 // --------------------- Footer ---------------------
@@ -203,7 +226,24 @@ footer {
     margin: 3rem 0 1rem 0;
   }
 }
-
 .more-slider {
   grid-area: moreSl;
 }
+
+
+
+// PREVENT IMAGE FROM JUMPING AROUND Image height / Image width * 100
+.image-container {
+  border:1px solid red;
+  // position: relative;
+  // padding-bottom: 66.78082192%; /* ratio of image height to width */
+  // height: 0;
+  // overflow: hidden;
+  // img {
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  // }
+}
+
