--- a/src/components/placeholder/placeholder.scss
+++ b/src/components/placeholder/placeholder.scss
@@ -1,55 +1,68 @@
-.lds-ellipsis {
-  display: inline-block;
+// .lds-ellipsis {
+//   display: inline-block;
+//   position: relative;
+//   width: 64px;
+//   height: 64px;
+// }
+// .lds-ellipsis div {
+//   position: absolute;
+//   top: 27px;
+//   width: 11px;
+//   height: 11px;
+//   border-radius: 50%;
+//   background: #1c3e5d;
+//   animation-timing-function: cubic-bezier(0, 1, 1, 0);
+// }
+// .lds-ellipsis div:nth-child(1) {
+//   left: 6px;
+//   animation: lds-ellipsis1 0.6s infinite;
+// }
+// .lds-ellipsis div:nth-child(2) {
+//   left: 6px;
+//   animation: lds-ellipsis2 0.6s infinite;
+// }
+// .lds-ellipsis div:nth-child(3) {
+//   left: 26px;
+//   animation: lds-ellipsis2 0.6s infinite;
+// }
+// .lds-ellipsis div:nth-child(4) {
+//   left: 45px;
+//   animation: lds-ellipsis3 0.6s infinite;
+// }
+// @keyframes lds-ellipsis1 {
+//   0% {
+//     transform: scale(0);
+//   }
+//   100% {
+//     transform: scale(1);
+//   }
+// }
+// @keyframes lds-ellipsis3 {
+//   0% {
+//     transform: scale(1);
+//   }
+//   100% {
+//     transform: scale(0);
+//   }
+// }
+// @keyframes lds-ellipsis2 {
+//   0% {
+//     transform: translate(0, 0);
+//   }
+//   100% {
+//     transform: translate(19px, 0);
+//   }
+// }
+.image-container {
   position: relative;
-  width: 64px;
-  height: 64px;
+  padding-bottom: 66.78082192%; /* ratio of image height to width */
+  height: 0;
+  overflow: hidden;
 }
-.lds-ellipsis div {
+
+.image-container img {
   position: absolute;
-  top: 27px;
-  width: 11px;
-  height: 11px;
-  border-radius: 50%;
-  background: #1c3e5d;
-  animation-timing-function: cubic-bezier(0, 1, 1, 0);
-}
-.lds-ellipsis div:nth-child(1) {
-  left: 6px;
-  animation: lds-ellipsis1 0.6s infinite;
-}
-.lds-ellipsis div:nth-child(2) {
-  left: 6px;
-  animation: lds-ellipsis2 0.6s infinite;
-}
-.lds-ellipsis div:nth-child(3) {
-  left: 26px;
-  animation: lds-ellipsis2 0.6s infinite;
-}
-.lds-ellipsis div:nth-child(4) {
-  left: 45px;
-  animation: lds-ellipsis3 0.6s infinite;
-}
-@keyframes lds-ellipsis1 {
-  0% {
-    transform: scale(0);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-@keyframes lds-ellipsis3 {
-  0% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(0);
-  }
-}
-@keyframes lds-ellipsis2 {
-  0% {
-    transform: translate(0, 0);
-  }
-  100% {
-    transform: translate(19px, 0);
-  }
+  top: 0;
+  left: 0;
+  width: 100%;
 }
